media/jackett/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
  namespace: media
  annotations:
    flux.weave.works/tag.jackett: glob:amd64-3*-ls*
    flux.weave.works/automated: 'false'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jackett
  template:
    metadata:
      labels:
        app: jackett
    spec:
      containers:
      - name: jackett
        image: linuxserver/jackett:v0.12.847-ls44
        ports:
        - name: jackett
          containerPort: 9117
        readinessProbe:
          tcpSocket:
            port: jackett
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: jackett
          initialDelaySeconds: 15
          periodSeconds: 20
        volumeMounts:
        - name: jackett
          subPath: config
          mountPath: /config
      volumes:
      - name: jackett
        iscsi:
          iqn: iqn.2014-09.com.radoncanyon:nas1:jackett
          targetPortal: 192.168.220.149
          lun: 1
          fsType: ext2
      - name: media
        persistentVolumeClaim:
          claimName: media
