media/jackett/sts.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jackett
  namespace: media
spec:
  serviceName: jackett
  selector:
    matchLabels:
      app: jackett
  template:
    metadata:
      labels:
        app: jackett
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      nodeSelector:
        workload: download
      containers:
        - name: jackett
          image: lscr.io/linuxserver/jackett:0.20.1088
          ports:
            - name: jackett
              containerPort: 9117
          readinessProbe:
            tcpSocket:
              port: jackett
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: jackett
            initialDelaySeconds: 15
            periodSeconds: 20
          volumeMounts:
            - name: jackett
              subPath: config
              mountPath: /config
      volumes:
        - name: jackett
          persistentVolumeClaim:
            claimName: jackett-iscsi-pvc
