media/jackett/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jackett
  namespace: media
spec:
  selector:
    app: jackett
  ports:
    - name: http
      port: 80
      targetPort: 9117
