media/jackett/ingress-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jackett-tailscale
  namespace: media
  annotations:
    tailscale.com/experimental-forward-cluster-traffic-via-ingress: "true"
spec:
  tls:
  - hosts:
    - jazzy-hat
  defaultBackend:
    service:
      name: jackett
      port:
        name: http
  ingressClassName: tailscale
