media/jackett/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jackett
  namespace: media
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "https://login.desertbluffs.com/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://login.desertbluffs.com/oauth2/start?rd=https://$host$escaped_request_uri"
spec:
  tls:
  - hosts:
    - g.desertbluffs.com
  rules:
  - host: g.desertbluffs.com
    http:
      paths:
      - path: /
        backend:
          serviceName: jackett
          servicePort: jackett
