media/jackett/00networkpolicy.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: jackett
  namespace: media
spec:
  podSelector:
    matchLabels:
      app: jackett
  ingress:
    - ports:
        - port: 9117
      from: []
